# dde-grand-search

./: .gitignore  CMakeLists.txt
debian/: changelog
src/dde-grand-search-daemon/: CMakeLists.txt
src/dde-grand-search-daemon/configuration/: configer.cpp
src/dde-grand-search-daemon/searcher/: searchergroup.cpp  searchergroup_p.h
src/dde-grand-search-daemon/searcher/file/: filesearchutils.cpp  filesearchutils.h
src/dde-grand-search-daemon/searcher/fulltext/: fulltextworker.cpp
src/dde-grand-search-daemon/searcher/ocr/: ocrtextsearcher.cpp  ocrtextworker.cpp
src/dde-grand-search-daemon/searcher/semantic/: semanticsearcher.cpp  semanticsearcher.h  semanticworker.cpp  semanticworker.h  semanticworker_p.h
src/global/: builtinsearch.h  searchconfigdefine.h
src/global/widgets/: highlightlabel.cpp  highlightutils.cpp  highlightutils.h
src/grand-search/: CMakeLists.txt  dde-grand-search.desktop
src/grand-search-dock-plugin/gui/: grandsearchwidget.cpp  grandsearchwidget.h
src/grand-search-shell-plugin/: searchitem.cpp
src/grand-search-shell-plugin/package/: searchitem.qml
src/grand-search-shell-plugin/translations/: org.deepin.ds.dock.searchitem.ts  org.deepin.ds.dock.searchitem_ar.ts  org.deepin.ds.dock.searchitem_az.ts  org.deepin.ds.dock.searchitem_bo.ts  org.deepin.ds.dock.searchitem_ca.ts  org.deepin.ds.dock.searchitem_de.ts  org.deepin.ds.dock.searchitem_de_DE.ts  org.deepin.ds.dock.searchitem_es.ts  org.deepin.ds.dock.searchitem_fi.ts  org.deepin.ds.dock.searchitem_fr.ts  org.deepin.ds.dock.searchitem_hu.ts  org.deepin.ds.dock.searchitem_it.ts  org.deepin.ds.dock.searchitem_ja.ts  org.deepin.ds.dock.searchitem_ko.ts  org.deepin.ds.dock.searchitem_lo.ts  org.deepin.ds.dock.searchitem_nb_NO.ts  org.deepin.ds.dock.searchitem_nl.ts  org.deepin.ds.dock.searchitem_pl.ts  org.deepin.ds.dock.searchitem_pt_BR.ts  org.deepin.ds.dock.searchitem_ru.ts  org.deepin.ds.dock.searchitem_sq.ts  org.deepin.ds.dock.searchitem_uk.ts  org.deepin.ds.dock.searchitem_zh_CN.ts  org.deepin.ds.dock.searchitem_zh_HK.ts  org.deepin.ds.dock.searchitem_zh_TW.ts
src/grand-search/business/query/: querycontroller.cpp
src/grand-search/gui/: datadefine.h  iconbutton.cpp  iconbutton.h  mainwindow.cpp
src/grand-search/gui/entrance/: entrancewidget.cpp  entrancewidget_p.h  searchedit.cpp  searchedit.h  searchedit_p.h
src/grand-search/gui/exhibition/: exhibitionwidget.cpp  exhibitionwidget.h
src/grand-search/gui/exhibition/matchresult/: authpromptwidget.cpp  authpromptwidget.h  groupwidget.cpp  groupwidget.h  matchwidget.cpp  matchwidget.h  resource.qrc
src/grand-search/gui/exhibition/matchresult/listview/: grandsearchlistdelegate.cpp  grandsearchlistdelegate.h  grandsearchlistview.cpp  grandsearchlistview.h
src/grand-search/gui/exhibition/preview/: generalpreviewplugin.cpp  previewplugin.h  previewwidget.cpp  previewwidget.h
src/grand-search/gui/searchconfig/: bestmatchwidget.cpp  configwidget.cpp  configwidget.h  indexwidget.cpp  indexwidget.h  planwidget.cpp  scopewidget.cpp  semanticsearchwidget.cpp  semanticsearchwidget.h  smartsearchwidget.cpp  smartsearchwidget.h  tailerwidget.cpp  tailerwidget.h
src/grand-search/gui/searchconfig/checkboxwidget/: checkboxwidget.cpp
src/grand-search/gui/searchconfig/switchwidget/: switchwidget.cpp
src/grand-search/gui/searchconfig/theme/: resource.qrc
src/grand-search/utils/: highlightprovider.cpp  highlightprovider.h  utils.cpp  utils.h
src/preview-plugin/image-preview/: CMakeLists.txt
src/preview-plugin/text-preview/: textpreviewplugin.h  textview.cpp  textview.h
tests/: CMakeLists.txt
tests/grand-search/: CMakeLists.txt  main.cpp
tests/grand-search-dock-plugin/: CMakeLists.txt  ut_ddegrandsearchdockplugin.cpp
tests/grand-search-dock-plugin/gui/: ut_grandsearchwidget.cpp
tests/grand-search/business/query/: ut_querycontroller.cpp
tests/grand-search/gui/entrance/: ut_entrancewidget.cpp
tests/grand-search/gui/exhibition/matchresult/: ut_groupwidget.cpp  ut_matchwidget.cpp
tests/grand-search/gui/exhibition/matchresult/listview/: ut_grandsearchlistdelegate.cpp  ut_grandsearchlistview.cpp
tests/grand-search/gui/exhibition/matchresult/viewmore/: ut_viewmorebutton.cpp
tests/grand-search/gui/exhibition/preview/: ut_generalpreviewplugin.cpp  ut_previewpluginmanager.cpp
tests/grand-search/gui/handlevisibility/: ut_handlevisibility.cpp
tests/grand-search/gui/searchconfig/: ut_blacklistwidget.cpp  ut_scopewidget.cpp  ut_searchenginewidget.cpp
tests/grand-search/gui/searchconfig/blacklistview/: ut_blacklistdelegate.cpp  ut_blacklistview.cpp
tests/grand-search/gui/searchconfig/hyperlinklabel/: ut_hyperlinklabel.cpp
tests/grand-search/utils/: ut_utils.cpp
tests/libgrand-search-daemon/: CMakeLists.txt
tests/libgrand-search-daemon/searchplugin/: ut_pluginprocess.cpp
tests/preview-plugin/: CMakeLists.txt
tests/preview-plugin/audio-preview/: ut_audiopreviewplugin.cpp
tests/preview-plugin/image-preview/: ut_imageview.cpp
tests/preview-plugin/text-preview/: ut_textview.cpp
tests/preview-plugin/video-preview/: ut_videoview.cpp
translations/: dde-grand-search.ts  dde-grand-search_af.ts  dde-grand-search_am_ET.ts  dde-grand-search_ar.ts  dde-grand-search_az.ts  dde-grand-search_bg.ts  dde-grand-search_bn.ts  dde-grand-search_bo.ts  dde-grand-search_br.ts  dde-grand-search_ca.ts  dde-grand-search_cs.ts  dde-grand-search_da.ts  dde-grand-search_de.ts  dde-grand-search_el.ts  dde-grand-search_en_US.ts  dde-grand-search_eo.ts  dde-grand-search_es.ts  dde-grand-search_et.ts  dde-grand-search_eu.ts  dde-grand-search_fa.ts  dde-grand-search_fi.ts  dde-grand-search_fil.ts  dde-grand-search_fr.ts  dde-grand-search_gl_ES.ts  dde-grand-search_he.ts  dde-grand-search_hi_IN.ts  dde-grand-search_hr.ts  dde-grand-search_hu.ts  dde-grand-search_hy.ts  dde-grand-search_id.ts  dde-grand-search_it.ts  dde-grand-search_ja.ts  dde-grand-search_ka.ts  dde-grand-search_km_KH.ts  dde-grand-search_kn_IN.ts  dde-grand-search_ko.ts  dde-grand-search_ku.ts  dde-grand-search_ku_IQ.ts  dde-grand-search_ky.ts  dde-grand-search_lo.ts  (+31 more)
(+4 files in other folders)
